--- a/src/pages/Admin/Admin.module.css
+++ b/src/pages/Admin/Admin.module.css
@@ -1,16 +1,58 @@
 .admin {
   width: 100vw;
-  height: 100vh;
+  height: 100vh
 }
 
 .admin header {
   width: 100%;
   height: 50px;
   background-color: var(--yellow);
+  color: var(--white);
+  display: flex;
+  align-items: center;
+  padding: 0 25px;
+}
+
+.admin header div {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+}
+
+.admin header h2 {
+  margin-right: auto;
 }
 
 .admin form {
   width: 200px;
   display: grid;
+  gap: 10px;
+}
+
+.admin form > *:not(button) {
+  /* background-color: var(--white); */
+  padding: 10px 10px;
+  border-radius: 5px;
+  border: none;
+}
+
+.admin form button {
+  justify-self: center;
+  width: fit-content;
+  padding: 2px 50px;
+  border-radius: 5px;
+  border: none;
+}
+
+.content {
+  padding: 30px;
+  display: flex;
+  gap: 50px;
+}
+
+.right {
+  display: flex;
+  flex-wrap: wrap;
   gap: 10px;
 }
